# Pokedex

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  main.cpp  tmp.cpp
include/: data.h  fetch.h  window.h
source/: fetch.cpp  window.cpp
